2010-01-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#143253 Portrait mode: close button reacts to presses outside
		  of its visible allocation

	* src/mb/hd-app.c (hd_app_request_geometry):
	  Resize the close decor button according to the app window's
	  portraitness when it's resized.
	* src/mb/hd-comp-mgr.h (HD_COMP_MGR_TOP_RIGHT_BTN_WIDTH_SMALL):
	  New constant for the small button width.
	* src/home/hd-title-bar.c (hd_title_bar_get_button_width):
	  Use it.

2010-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-launcher-grid.c (hd_launcher_lazy_traverse_tree):
	Layout pages after each row of scanned tiles (could be more optimal by
	making a list of 'dirty' pages).
	* src/launcher/hd-launcher-grid.c: Don't relayout when tiles are added
	or removed, it is now done from the traversal code.

	Fix the small regression caused by the fix for NB#147359.

	* src/home/hd-render-manager.c
	(hd_render_manager_get_visible_client_for_tasknav): New.
	(hd_render_manager_set_state): Use
	hd_render_manager_get_visible_client_for_tasknav to select actor for
	the tasknav transition. Also show the actor because it is not shown in
	the 'slide to unlock' case.
	* src/launcher/hd-launcher.c: Remove unused member 'gsource_id'.

2010-01-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	To mitigate NB#141519 keep the application's fake window in place
	when we're rotating unless it's just started growing.  This way we
	either don't see it (if the Phone is quick to wake up) or we see
	the regular fake window rather than some jerky launcher -> fake win
	-> desktop -> Phone transition.

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c (hd_launcher_transition_is_playing):
	  To know if the fake window is still small.
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  ...and only then stop displaying the loading screenshot.

2010-01-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#135337 status area and tasks button overlayed on the top